--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cookies": "^0.9.1",
+    "frontend": "file:",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router": "^7.0.2",
